# mytrilinos_tutorials

./: README.md
direct_solve/: CMakeLists.txt  simple_solve.cpp
enter_teuchos/: CMakeLists.txt  clp.cpp  ref_count.cpp
hello_world/: hello_world.cpp
norms_etc/: .vimrc  01_init.cpp  02_map+vector.cpp  03_sparse.cpp  CMakeLists.txt  norms_etc.cpp
ref_count/: CMakeLists.txt
trilinos_says_hello_world/: CMakeLists.txt  hello_world.cpp
